--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <div class="container">
     	<div>
-    		<h2 class="text-muted">Yahoo Seller</h2>
+    		<h1 class="text-muted">Yahoo Seller</h1>
+    		<nav>
+    			<ul class="navbar nav nav-justified">
+    				<li class="active"><a href="#">Home</a></li>
+    				<li><a  href="#">Services</a></li>
+    				<li><a  href="#">Downloads</a></li>
+    				<li><a  href="#">Projects</a></li>
+    				<li><a  href="#">About</a></li>
+    				<li><a  href="#">Contact</a></li>
+
+    			</ul>
+    		</nav>
+    	</div>
+    	<div class="jumbotron">
+    		<h1>We are selling Yahoo!</h1>
+    		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia suscipit, aliquam impedit placeat ab sed odio maiores dignissimos. Commodi, hic.</p>
+    		<p><a class="btn btn-success btn-lg" href="#">Buy Today</a></p>
     	</div>
     </div>
     </body>
