final commit template complete

--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
     		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia suscipit, aliquam impedit placeat ab sed odio maiores dignissimos. Commodi, hic.</p>
     		<p><a class="btn btn-success btn-lg" href="#">Buy Today</a></p>
     	</div>
+    	<div class="row">
+    		<div class="col-lg-4">
+    			<h1>Lorem ipsum dolor sit amet iuhs.</h1>
+    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum quisquam possimus fuga corporis, sed dolores laudantium facilis odio vero, perspiciatis repellat nam. Possimus, magni.</p>
+    			<p class="centro"><a href="#" class="btn btn-primary">Click me &raquo;</a></p>
+    		</div>
+    		<div class="col-lg-4">
+    			<h1>Lorem ipsum dolor sit amet iuhs.</h1>
+    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum quisquam possimus fuga corporis, sed dolores laudantium facilis odio vero, perspiciatis repellat nam. Possimus, magni.</p>
+    			<p class="centro"><a href="#" class="btn btn-primary">Click me &raquo;</a></p>
+    		</div>
+    		<div class="col-lg-4">
+    			<h1>Lorem ipsum dolor sit amet iuhs.</h1>
+    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem earum quisquam possimus fuga corporis, sed dolores laudantium facilis odio vero, perspiciatis repellat nam. Possimus, magni.</p>
+    			<p class="centro"><a href="#" class="btn btn-primary">Click me &raquo;</a></p>
+    		</div>
+    	</div>
     </div>
     </body>
     </html>
